# 2D_shooter_looter

./: CMakeLists.txt  README.md  main.cpp
EngineRoot/: README.md
EngineRoot/Engine/Core/: CMakeLists.txt
EngineRoot/Engine/Core/inc/: aiming.h  bullet_system.h  monster.h  player.h  rendering.h  startup.h
EngineRoot/Engine/Core/src/: aiming.cpp  bullet_system.cpp  monster.cpp  player.cpp  rendering.cpp  startup.cpp
